--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Big Data Engineer</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            focused on data analysis, Big Data, web services.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -417,9 +416,9 @@
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+            <h4>“Programa de Especialización en Big Data”</h4>
+            <h5>2021 - ∞</h5>
+            <p><em>Social Data Consulting, Miraflores, Peru</em></p>
             <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
           </div>
           <div class="resume-item">
