--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Big Data Engineer</h3>
           <p class="fst-italic">
-            focused on data analysis, Big Data, web services.
+            Focused on Data analysis, Big Data, Web services.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -100,15 +100,15 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span> --- <!-- Master --> </span></li> 
                 <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>FabricioGutierrezRosales@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            Pending collaborative work in suggesting alternatives to carry out a correct process. 
+            my favorite hobbies are swimming and reading. I belong to the swimming team of my university
           </p>
         </div>
       </div>
