--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@
                 <ul>
                   <li><strong>Category</strong>: Data Analytics</li>
                   <li><strong>Academy</strong>: Udemy</li>
-                  <li><strong>Project date</strong>: 01 March, 2020</li>
-                  <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                  <li><strong>Project date</strong>: 25 November, 2021</li>
+                  <li><strong>Project URL</strong>: <a href="https://github.com/FabriGR/Pandas-Masterclass-Advanced-Data-Analysis-with-Pandas">Github</a></li>
                 </ul>
               </h4>
               <p>Data Analytics</p>
