--- a/index.html
+++ b/index.html
@@ -574,8 +574,15 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
+              <h4>Pandas Masterclass: Advanced Data Analysis with Pandas
+                <ul>
+                  <li><strong>Category</strong>: Data Analytics</li>
+                  <li><strong>Academy</strong>: Udemy</li>
+                  <li><strong>Project date</strong>: 25 November, 2021</li>
+                  <li><strong>Project URL</strong>: <a href="https://github.com/FabriGR/Pandas-Masterclass-Advanced-Data-Analysis-with-Pandas">Github</a></li>
+                </ul>
+              </h4>
+              <p>Data Analytics</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
