--- a/index.html
+++ b/index.html
@@ -553,12 +553,12 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Pandas Masterclass: Advanced Data Analysis with Pandas
+              <h4>Power BI & Business Intelligence 2023
                 <ul>
                   <li><strong>Category</strong>: Data Analytics</li>
                   <li><strong>Academy</strong>: Udemy</li>
                   <li><strong>Project date</strong>: 25 November, 2021</li>
-                  <li><strong>Project URL</strong>: <a href="https://github.com/FabriGR/Pandas-Masterclass-Advanced-Data-Analysis-with-Pandas">Github</a></li>
+                  <li><strong>Project URL</strong>: <a href="https://github.com/FabriGR/Power-BI-Business-Intelligence-2023">Github</a></li>
                 </ul>
               </h4>
               <p>Data Analytics</p>
@@ -570,7 +570,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -584,7 +584,7 @@
               </h4>
               <p>Data Analytics</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pandas Masterclass: Advanced Data Analysis with Pandas"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -595,8 +595,15 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
+              <h4>Programa de Especializacion en Python for Data Science. SDC - Learning
+                <ul>
+                  <li><strong>Category</strong>: Data Analytics</li>
+                  <li><strong>Academy</strong>: Udemy</li>
+                  <li><strong>Project date</strong>: 04 Marzo, 2022</li>
+                  <li><strong>Project URL</strong>: <a href="https://github.com/FabriGR/Pandas-Masterclass-Advanced-Data-Analysis-with-Pandas">Github</a></li>
+                </ul>
+              </h4>
+              <p>Data Analytics</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
